--- a/README.adoc
+++ b/README.adoc
@@ -7,7 +7,7 @@
 //     IBM Corporation
 //
 :projectid: rest-intro
-:page-layout: guide
+:page-layout: guide-multipane
 :page-duration: 30 minutes
 :page-releasedate: 2017-09-19
 :page-description: Learn how to create a REST service with JAX-RS, JSON-P, and Open Liberty.
@@ -24,7 +24,7 @@ Learn how to create a REST service with JAX-RS, JSON-P, and Open Liberty.
 You will learn how to build and test a simple REST service with JAX-RS and JSON-P that will expose
 the JVM's system properties. The REST service will respond to GET requests made to the URL:
 
-[source,role="no_copy"]
+[source,role="command"]
 ----
 http://localhost:9080/LibertyProject/System/properties
 ----
@@ -32,7 +32,7 @@ http://localhost:9080/LibertyProject/System/properties
 The service responds to a `GET` request with a JSON representation of the system properties, where
 each property is a field in a JSON object like this:
 
-[source,json,role="no_copy"]
+[source,json,role="command"]
 ----
 {
   "os.name":"Mac",
@@ -58,10 +58,13 @@ common path. You can think of the JAX-RS application as a wrapper for all your r
 single JAX-RS application is common, although multiple are possible.
 
 Create the JAX-RS application class in the `src/main/java/io/openliberty/guides/rest/SystemApplication.java` file:
-[source,java]
+
+SystemApplication.java,lines=3-9
+[source,java,linenums,role='code_column']
 ----
 include::finish/src/main/java/io/openliberty/guides/rest/SystemApplication.java[tags=**;!comment]
 ----
+
 The `SystemApplication` class extends the `Application` class, which in turn associates all JAX-RS
 resource classes in the WAR file with this JAX-RS application, making them available under the common
 path specified in the `SystemApplication` class. The `@ApplicationPath` annotation has a
@@ -75,7 +78,9 @@ to have a single class handle multiple different resources, but keeping a clean 
 of resources helps with maintainability in the long run.
 
 Create the JAX-RS resource class in the `src/main/java/io/openliberty/guides/rest/PropertiesResource.java` file:
-[source,java]
+
+PropertiesResource.java,lines=5-25
+[source,java,linenums,role='code_column']
 ----
 include::finish/src/main/java/io/openliberty/guides/rest/PropertiesResource.java[tags=**;!comment]
 ----
@@ -86,7 +91,7 @@ The `@Path` annotation on the class indicates that this resource responds to the
 in the JAX-RS application. The `@ApplicationPath` annotation in the application class together with
 the `@Path` annotation in this class indicates that the resource is available at the `System/properties`
 path.
-[source,java,role="no_copy"]
+[source,java,role="command"]
 ----
 include::finish/src/main/java/io/openliberty/guides/rest/PropertiesResource.java[tags=class]
 ----
@@ -95,7 +100,7 @@ JAX-RS maps the HTTP methods on the URL to the methods on the class. The method 
 by the annotations specified on the methods. In the application you are building, an HTTP `GET` request
 to the `System/properties` path results in the system properties being returned:
 
-[source,java,indent=0,role="no_copy"]
+[source,java,indent=0,role="command"]
 ----
 include::finish/src/main/java/io/openliberty/guides/rest/PropertiesResource.java[tags=getProperties]
 ----
@@ -147,7 +152,7 @@ the Maven `pom.xml` file. This is specified in the `httpEndpoint` element. Varia
 The variables being used in the `server.xml` file are provided by the `bootstrapProperties` section
 of the Maven `pom.xml`:
 
-[source,xml,indent=0, role="no_copy"]
+[source,xml,indent=0,role="command"]
 ----
 include::finish/pom.xml[lines=111..115]
 ----
@@ -180,7 +185,7 @@ port and the application context root are key, and are dictated by the server co
 information can be hardcoded, it is better to specify it in a single place like the Maven `pom.xml`
 file. Open the `pom.xml` file to see how the application information is provided in the file:
 
-[source,xml,indent=0,role="no_copy"]
+[source,xml,indent=0,role="command"]
 ----
 include::finish/pom.xml[lines=15..17]
 ----
@@ -188,7 +193,7 @@ include::finish/pom.xml[lines=15..17]
 These Maven properties are then passed to the Java test program as a series of system properties in
 the `pom.xml` file:
 
-[source,xml,indent=0,role="no_copy"]
+[source,xml,indent=0,role="command"]
 ----
 include::finish/pom.xml[lines=179..182]
 ----
@@ -196,7 +201,7 @@ include::finish/pom.xml[lines=179..182]
 Getting the values to create a representation of the URL is simple. The test class uses the properties
 to get the application details:
 
-[source,java,indent=0,role="no_copy"]
+[source,java,indent=0,role="command"]
 ----
 include::finish/src/test/java/it/io/openliberty/guides/rest/EndpointTest.java[tags=systemProperties]
 ----
@@ -206,7 +211,7 @@ representation. To get the JAX-RS client to do the conversion, the client needs 
 class registered with it by calling the `register` method and providing the `Class` object for the
 `JsrJsonpProvider` class:
 
-[source,java,indent=0,role="no_copy"]
+[source,java,indent=0,role="command"]
 ----
 include::finish/src/test/java/it/io/openliberty/guides/rest/EndpointTest.java[tags=clientSetup]
 ----
@@ -217,7 +222,7 @@ on `WebTarget` and then the `get` method on the returned object need to be calle
 call is a synchronous call that blocks until a response is received. This call returns a `Response`
 object, which can be interrogated to determine whether the request was successful:
 
-[source,java,indent=0,role="no_copy"]
+[source,java,indent=0,role="command"]
 ----
 include::finish/src/test/java/it/io/openliberty/guides/rest/EndpointTest.java[tags=request]
 ----
@@ -229,7 +234,7 @@ important to associate the expected response code with the second parameter and 
 with the third parameter. Otherwise, the error messages from JUnit will claim that the actual response
 is the expected one, which can cause confusion:
 
-[source,java,indent=0,role="no_copy"]
+[source,java,indent=0,role="command"]
 ----
 include::finish/src/test/java/it/io/openliberty/guides/rest/EndpointTest.java[tags=response]
 ----
@@ -239,7 +244,7 @@ are running on the same machine, it is reasonable to expect that the system prop
 and remote JVM would be the same. In this case, an assertion is made that the `os.name` system property
 for both JVMs is the same. You could write additional assertions to check for more values:
 
-[source,java,indent=0,role="no_copy"]
+[source,java,indent=0,role="command"]
 ----
 include::finish/src/test/java/it/io/openliberty/guides/rest/EndpointTest.java[tags=body]
 ----
@@ -248,7 +253,7 @@ To rebuild, run the tests, and see that the test passes, run the command: `mvn i
 build takes a little longer than before the test existed, but expect to see the following information
 in the output:
 
-[source,role="no_copy"]
+[source,role="command"]
 ----
 -------------------------------------------------------
  T E S T S
@@ -269,3 +274,5 @@ assertion to a constant value that doesn't match the `os.name` system property.
 You developed a REST service by using JAX-RS, JSON-P, and Liberty.
 
 include::{common-includes}/finish.adoc[]
+
+
