--- a/README.adoc
+++ b/README.adoc
@@ -15,12 +15,15 @@
 :page-tags: ['REST', 'MicroProfile', 'microservices']
 :page-related-guides: ['rest-client-java', 'rest-client-angularjs']
 :page-permalink: /guides/{projectid}
+:page-title: Creating a RESTful web service
 :repo-description: Visit the https://openliberty.io/guides/{projectid}.html[website] for the rendered version of the guide.
 :common-includes: https://raw.githubusercontent.com/OpenLiberty/guides-common/master
 :link-to-published-guide: This repository contains the guide documentation source. To view the guide in published form, view it on the https://openliberty.io/guides/{projectid}.html[Open Liberty website].
 [.hidden]
 NOTE: This repository contains the guide documentation source. To view the guide in published form, view it on the https://openliberty.io/guides/{projectid}.html[Open Liberty website].
-= Creating a RESTful web service
+
+[.hidden]
+{page-title}
 
 Learn how to create a REST service with JAX-RS, JSON-P, and Open Liberty.
 
