--- a/README.adoc
+++ b/README.adoc
@@ -86,7 +86,7 @@ value that indicates the path within the WAR that the JAX-RS application accepts
 SystemApplication.java
 [source,java,linenums,role='code_column']
 ----
-include::finish/src/main/java/io/openliberty/guides/rest/SystemApplication.java[tags=**;!comment]
+include::finish/src/main/java/io/openliberty/guides/rest/SystemApplication.java[]
 ----
 
 == Creating the JAX-RS resource
@@ -143,13 +143,13 @@ the [hotspot=23 file=0]`getKey` and [hotspot=24 file=0]`getValue` methods on the
 PropertiesResource.java
 [source,java,linenums,role='code_column']
 ----
-include::finish/src/main/java/io/openliberty/guides/rest/PropertiesResource.java[tags=**;!comment]
+include::finish/src/main/java/io/openliberty/guides/rest/PropertiesResource.java[]
 ----
 
 SystemApplication.java
 [source,java,linenums,role='code_column']
 ----
-include::finish/src/main/java/io/openliberty/guides/rest/SystemApplication.java[tags=**;!comment]
+include::finish/src/main/java/io/openliberty/guides/rest/SystemApplication.java[]
 ----
 
 == Configuring the server
@@ -179,7 +179,7 @@ the Maven [hotspot file=1]`pom.xml` file. This is specified in the [hotspot=8-9 
 pom.xml
 [source,xml,linenums,role="code_column"]
 ----
-include::finish/pom.xml[tags=**]
+include::finish/pom.xml[]
 ----
 
 The variables being used in the [hotspot file=0]`server.xml` file are provided by the [hotspot=148-152 file=1]`<bootstrapProperties/>` section
@@ -217,41 +217,41 @@ does the latter.
 EndpointTest.java
 [source,java,linenums,role="code_column"]
 ----
-include::finish/src/test/java/it/io/openliberty/guides/rest/EndpointTest.java[tags=**;!comment]
+include::finish/src/test/java/it/io/openliberty/guides/rest/EndpointTest.java[]
 ----
 
 This test class has more lines of code than the resource implementation. This situation is common.
-The test method is indicated with the [hotspot=16 file=0]`@Test` annotation.
+The test method is indicated with the [hotspot=28 file=0]`@Test` annotation.
 
 pom.xml
 [source,xml,linenums,role="code_column"]
 ----
-include::finish/pom.xml[tags=**]
+include::finish/pom.xml[]
 ----
 
 The test code needs to know some information about the application in order to make requests. The server
 port and the application context root are key, and are dictated by the server configuration. While this
 information can be hardcoded, it is better to specify it in a single place like the Maven [hotspot file=1]`pom.xml`
-file. Refer to the [hotspot file=1]`pom.xml` file to see how the application information such as the [hotspot=22 file=1]`<app.name/>`, [hotspot=23 file=1]`<testServerHttpPort/>` and [hotspot=24 file=1]`<testServerHttpsPort/>` elements are provided in the file.
+file. Refer to the [hotspot file=1]`pom.xml` file to see how the application information such as the [hotspot=23 file=1]`<app.name/>`, [hotspot=24 file=1]`<testServerHttpPort/>` and [hotspot=25 file=1]`<testServerHttpsPort/>` elements are provided in the file.
 
-These Maven properties are then passed to the Java test program as the [hotspot=187-191 file=1]`<systemPropertyVariables/>` element in
+These Maven properties are then passed to the Java test program as the [hotspot=192-196 file=1]`<systemPropertyVariables/>` element in
 the [hotspot file=1]`pom.xml` file.
 
-Getting the values to create a representation of the URL is simple. The test class uses the [hotspot=18-19 file=0]`getProperty` method
+Getting the values to create a representation of the URL is simple. The test class uses the [hotspot=31-32 file=0]`getProperty` method
 to get the application details.
 
 The JAX-RS client can be used to make the REST call and convert the payload to and from a JSON-P
 representation. To get the JAX-RS client to do the conversion, the client needs to have the `JsrJsonpProvider`
-class registered with it by calling the [hotspot=23 file=0]`register` method and providing the `Class` object for the
+class registered with it by calling the [hotspot=38 file=0]`register` method and providing the `Class` object for the
 `JsrJsonpProvider` class.
 
 To call the JAX-RS service using the JAX-RS client, you first create a `WebTarget` object by calling
-the [hotspot=25 file=0]`target` method providing the URL. To cause the HTTP request to occur first the [hotspot=26 file=0]`request` method
-on `WebTarget` and then the [hotspot=26 file=0]`get` method on the returned object need to be called. The [hotspot=26 file=0]`get` method
-call is a synchronous call that blocks until a response is received. This call returns a [hotspot=26 file=0]`Response`
+the [hotspot=42 file=0]`target` method providing the URL. To cause the HTTP request to occur first the [hotspot=43 file=0]`request` method
+on `WebTarget` and then the [hotspot=43 file=0]`get` method on the returned object need to be called. The [hotspot=43 file=0]`get` method
+call is a synchronous call that blocks until a response is received. This call returns a [hotspot=43 file=0]`Response`
 object, which can be interrogated to determine whether the request was successful.
 
-The first thing to check is that a `200` response was received. The JUnit [hotspot=28-29 file=0]`assertEquals` method can
+The first thing to check is that a `200` response was received. The JUnit [hotspot=47-48 file=0]`assertEquals` method can
 be used for this. The first parameter is the error message that indicates why the test failed. The
 second parameter is the expected response code, and the third is the actual response code. It is
 important to associate the expected response code with the second parameter and the actual response
@@ -261,7 +261,7 @@ is the expected one, which can cause confusion.
 Check the response body to ensure it returned the right information. Since the client and the server
 are running on the same machine, it is reasonable to expect that the system properties for the local
 and remote JVM would be the same. In this case, an assertion is made that the `os.name` system property
-for both JVMs is the same. You could write additional assertions [hotspot=33-35 file=0]`assertEquals` to check for more values.
+for both JVMs is the same. You could write additional assertions [hotspot=47-48 file=0]`assertEquals` to check for more values.
 
 === Running the tests
 
