--- a/README.adoc
+++ b/README.adoc
@@ -234,7 +234,7 @@ port and the application context root are key, and are dictated by the server co
 information can be hardcoded, it is better to specify it in a single place like the Maven [hotspot file=1]`pom.xml`
 file. Refer to the [hotspot file=1]`pom.xml` file to see how the application information such as the [hotspot=23 file=1]`<app.name/>`, [hotspot=24 file=1]`<testServerHttpPort/>` and [hotspot=25 file=1]`<testServerHttpsPort/>` elements are provided in the file.
 
-These Maven properties are then passed to the Java test program as the [hotspot=192-196 file=1]`<systemPropertyVariables/>` element in
+These Maven properties are then passed to the Java test program as the [hotspot=testsysprops file=1]`<systemPropertyVariables/>` element in
 the [hotspot file=1]`pom.xml` file.
 
 Getting the values to create a representation of the URL is simple. The test class uses the [hotspot=31-32 file=0]`getProperty` method
