--- a/README.adoc
+++ b/README.adoc
@@ -25,7 +25,8 @@
 [.hidden]
 NOTE: This repository contains the guide documentation source. To view the guide in published form, view it on the https://openliberty.io/guides/{projectid}.html[Open Liberty website].
 
-Learn how to create a REST service with JAX-RS, JSON-P, and Open Liberty.?REST?????????????????
+Learn how to create a REST service with JAX-RS, JSON-P, and Open Liberty
+OpenLibertyでRESTサービスを作る方法について学びます。
 
 == What you'll learn
 
