--- a/README.adoc
+++ b/README.adoc
@@ -29,7 +29,7 @@ OpenLibertyでRESTサービスを作る方法について学びます。
 
 == このガイドで学ぶこと
 
-このガイドでは、JAX-RSとJSON-Pを使って簡単なRESTサービスを構築し、テストする方法を学びます。このサービスは、`\http://localhost:9080/LibertyProject/System/properties`への`GET`リクエストに応答して、JVMのシステムプロパティを表示するものです。
+このガイドでは、JAX-RSとJSON-Pを使って簡単なRESTサービスを構築し、テストする方法を学びます。このサービスは `\http://localhost:9080/LibertyProject/System/properties`への `GET`リクエストに応答して、JVMのシステムプロパティを表示するものです。
 
 このサービスは、`GET`リクエストに対して、システムプロパティの内容をJSON形式で 応答します。
 各プロパティは、次のように、JSONオブジェクトのフィールドで表示されます。
@@ -42,9 +42,9 @@ OpenLibertyでRESTサービスを作る方法について学びます。
 }
 ----
 
-新しいRESTアプリケーションを作成するときには、きちんとAPIの設計をすることが重要です。 JAX-RS APIは、JSON-RPC、またはXML-RPC APIを作成するためにも使用できますが、それはRESTfulなサービスではありません。良いRESTfulサービスは、サービスによって公開されているリソース（このガイドの例では、システムプロパティがリソースとなります。）を、作成、読み取り、更新、削除できるように設計されています。
+新しいRESTアプリケーションを作成するときには、きちんとAPIの設計をすることが重要です。 JAX-RS APIは、JSON-RPC、またはXML-RPC APIを作成するためにも使用できますが、それはRESTfulなサービスではありません。良いRESTfulサービスは、サービスによって公開されているリソースを、作成、読み取り、更新、削除できるように設計します。このガイドの例では、システムプロパティが、公開されているリソースとなります。
 
-サービスは `/System/properties` というパスへの`GET`リクエストに対して `200 OK` と共に、JVMのすべてのシステムプロパティを返します。
+サービスは `/System/properties` というパスへ `GET`リクエストが送られると、 `200 OK` と共に、JVMのすべてのシステムプロパティを返します。
 
 [role="command"]
 include::{common-includes}/gitclone.adoc[]
